--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Index</th>\n      <th>City</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>Muros</td>\n      <td>42.7762</td>\n      <td>-9.0603</td>\n      <td>61.09</td>\n      <td>77</td>\n      <td>100</td>\n      <td>15.82</td>\n      <td>ES</td>\n      <td>1624133145</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Hobart</td>\n      <td>-42.8794</td>\n      <td>147.3294</td>\n      <td>47.01</td>\n      <td>92</td>\n      <td>90</td>\n      <td>0.00</td>\n      <td>AU</td>\n      <td>1624132870</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>Ostrovnoy</td>\n      <td>68.0531</td>\n      <td>39.5131</td>\n      <td>48.52</td>\n      <td>80</td>\n      <td>39</td>\n      <td>8.03</td>\n      <td>RU</td>\n      <td>1624133145</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>Voh</td>\n      <td>-20.9667</td>\n      <td>164.7000</td>\n      <td>70.30</td>\n      <td>87</td>\n      <td>98</td>\n      <td>2.98</td>\n      <td>NC</td>\n      <td>1624133146</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>Isangel</td>\n      <td>-19.5500</td>\n      <td>169.2667</td>\n      <td>76.21</td>\n      <td>85</td>\n      <td>72</td>\n      <td>6.11</td>\n      <td>VU</td>\n      <td>1624133146</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>573</th>\n      <td>573</td>\n      <td>Cayenne</td>\n      <td>4.9333</td>\n      <td>-52.3333</td>\n      <td>86.04</td>\n      <td>75</td>\n      <td>75</td>\n      <td>1.01</td>\n      <td>GF</td>\n      <td>1624133529</td>\n    </tr>\n    <tr>\n      <th>574</th>\n      <td>574</td>\n      <td>Boli</td>\n      <td>45.7667</td>\n      <td>130.5167</td>\n      <td>53.04</td>\n      <td>97</td>\n      <td>12</td>\n      <td>4.34</td>\n      <td>CN</td>\n      <td>1624133529</td>\n    </tr>\n    <tr>\n      <th>575</th>\n      <td>575</td>\n      <td>Pangai</td>\n      <td>-19.8000</td>\n      <td>-174.3500</td>\n      <td>76.12</td>\n      <td>75</td>\n      <td>18</td>\n      <td>12.28</td>\n      <td>TO</td>\n      <td>1624133530</td>\n    </tr>\n    <tr>\n      <th>576</th>\n      <td>576</td>\n      <td>Buala</td>\n      <td>-8.1450</td>\n      <td>159.5921</td>\n      <td>79.83</td>\n      <td>80</td>\n      <td>75</td>\n      <td>4.88</td>\n      <td>SB</td>\n      <td>1624133530</td>\n    </tr>\n    <tr>\n      <th>577</th>\n      <td>577</td>\n      <td>Beausejour</td>\n      <td>50.0622</td>\n      <td>-96.5167</td>\n      <td>71.78</td>\n      <td>65</td>\n      <td>93</td>\n      <td>9.78</td>\n      <td>CA</td>\n      <td>1624133530</td>\n    </tr>\n  </tbody>\n</table>\n<p>578 rows × 10 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 27
     }
    ],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b02de36decaa492c8a7d02cb57991b79"
+       "model_id": "0987d37c0a9c40acb42eee16327363fa"
       }
      },
      "metadata": {}
@@ -161,22 +161,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Index                   City      Lat      Lng  Max Temp  Humidity  \\\n",
+       "13      13             Alexandria  31.2156  29.9553     74.91        64   \n",
+       "172    172  Chapada Dos Guimaraes -15.4606 -55.7497     74.86        28   \n",
+       "186    186             Marienburg  54.0359  19.0266     78.46        65   \n",
+       "212    212               Namangan  40.9983  71.6726     73.85        35   \n",
+       "223    223                    Gat  31.6100  34.7642     74.80       100   \n",
+       "253    253                   Auce  56.4598  22.9017     72.05        84   \n",
+       "254    254                Alghero  40.5589   8.3181     77.09        78   \n",
+       "334    334                  Vlore  40.4667  19.4897     70.72        79   \n",
+       "411    411                   Aksu  41.1231  80.2644     73.42        28   \n",
+       "474    474                 Tukrah  32.5341  20.5791     72.21        84   \n",
+       "510    510                Marfino  55.7028  37.3822     73.54        64   \n",
+       "548    548                 Bastia  42.6667   9.3333     76.80        87   \n",
+       "\n",
+       "     Cloudiness  Wind Speed Country        Date HotelName  \n",
+       "13            0        7.36      EG  1624132849            \n",
+       "172           0        6.42      BR  1624133198            \n",
+       "186           0        7.81      PL  1624133275            \n",
+       "212           0        9.22      UZ  1624133283            \n",
+       "223           0        2.91      IL  1624133287            \n",
+       "253           0        6.22      LV  1624133297            \n",
+       "254           0        9.22      IT  1624133297            \n",
+       "334           0        4.59      AL  1624133321            \n",
+       "411           0        5.44      CN  1624133415            \n",
+       "474           0        4.90      LY  1624133435            \n",
+       "510           0        6.71      RU  1624133446            \n",
+       "548           0        4.61      FR  1624133520            "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Index</th>\n      <th>City</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>HotelName</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>13</th>\n      <td>13</td>\n      <td>Alexandria</td>\n      <td>31.2156</td>\n      <td>29.9553</td>\n      <td>74.91</td>\n      <td>64</td>\n      <td>0</td>\n      <td>7.36</td>\n      <td>EG</td>\n      <td>1624132849</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>172</th>\n      <td>172</td>\n      <td>Chapada Dos Guimaraes</td>\n      <td>-15.4606</td>\n      <td>-55.7497</td>\n      <td>74.86</td>\n      <td>28</td>\n      <td>0</td>\n      <td>6.42</td>\n      <td>BR</td>\n      <td>1624133198</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>186</th>\n      <td>186</td>\n      <td>Marienburg</td>\n      <td>54.0359</td>\n      <td>19.0266</td>\n      <td>78.46</td>\n      <td>65</td>\n      <td>0</td>\n      <td>7.81</td>\n      <td>PL</td>\n      <td>1624133275</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>212</th>\n      <td>212</td>\n      <td>Namangan</td>\n      <td>40.9983</td>\n      <td>71.6726</td>\n      <td>73.85</td>\n      <td>35</td>\n      <td>0</td>\n      <td>9.22</td>\n      <td>UZ</td>\n      <td>1624133283</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>223</th>\n      <td>223</td>\n      <td>Gat</td>\n      <td>31.6100</td>\n      <td>34.7642</td>\n      <td>74.80</td>\n      <td>100</td>\n      <td>0</td>\n      <td>2.91</td>\n      <td>IL</td>\n      <td>1624133287</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>253</th>\n      <td>253</td>\n      <td>Auce</td>\n      <td>56.4598</td>\n      <td>22.9017</td>\n      <td>72.05</td>\n      <td>84</td>\n      <td>0</td>\n      <td>6.22</td>\n      <td>LV</td>\n      <td>1624133297</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>254</th>\n      <td>254</td>\n      <td>Alghero</td>\n      <td>40.5589</td>\n      <td>8.3181</td>\n      <td>77.09</td>\n      <td>78</td>\n      <td>0</td>\n      <td>9.22</td>\n      <td>IT</td>\n      <td>1624133297</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>334</th>\n      <td>334</td>\n      <td>Vlore</td>\n      <td>40.4667</td>\n      <td>19.4897</td>\n      <td>70.72</td>\n      <td>79</td>\n      <td>0</td>\n      <td>4.59</td>\n      <td>AL</td>\n      <td>1624133321</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>411</th>\n      <td>411</td>\n      <td>Aksu</td>\n      <td>41.1231</td>\n      <td>80.2644</td>\n      <td>73.42</td>\n      <td>28</td>\n      <td>0</td>\n      <td>5.44</td>\n      <td>CN</td>\n      <td>1624133415</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>474</th>\n      <td>474</td>\n      <td>Tukrah</td>\n      <td>32.5341</td>\n      <td>20.5791</td>\n      <td>72.21</td>\n      <td>84</td>\n      <td>0</td>\n      <td>4.90</td>\n      <td>LY</td>\n      <td>1624133435</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>510</th>\n      <td>510</td>\n      <td>Marfino</td>\n      <td>55.7028</td>\n      <td>37.3822</td>\n      <td>73.54</td>\n      <td>64</td>\n      <td>0</td>\n      <td>6.71</td>\n      <td>RU</td>\n      <td>1624133446</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>548</th>\n      <td>548</td>\n      <td>Bastia</td>\n      <td>42.6667</td>\n      <td>9.3333</td>\n      <td>76.80</td>\n      <td>87</td>\n      <td>0</td>\n      <td>4.61</td>\n      <td>FR</td>\n      <td>1624133520</td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
    "source": [
     "# A max temperature lower than 80 degrees but higher than 70.\n",
     "# Wind speed less than 10 mph.\n",
     "# Zero cloudiness.\n",
-    "# Drop any rows that don't contain all three conditions. You want to be sure the weather is ideal.\n",
-    "# Note: Feel free to adjust to your specifications but be sure to limit the number of rows returned by your API requests to a reasonable number.\n",
     "\n",
     "#Store into variable named hotel_df\n",
     "hotel_df = pd.DataFrame(city_data.loc[((city_data[\"Max Temp\"]>=70) & (city_data[\"Max Temp\"]<=80))& (city_data[\"Wind Speed\"]<10) & (city_data[\"Cloudiness\"] == 0)])\n",
     "\n",
     "# Add a \"Hotel Name\" column to the DataFrame.\n",
     "hotel_df['HotelName'] = \"\"\n",
-    "#hotel_df"
+    "hotel_df"
    ]
   },
   {
@@ -188,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,9 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Figure(layout=FigureLayout(border='1px solid black', height='500px', margin='0 auto 0 auto', padding='1px', wi…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "0987d37c0a9c40acb42eee16327363fa"
+      }
+     },
+     "metadata": {}
+    }
+   ],
    "source": [
     "# Plot markers on top of the heatmap.\n",
     "markers = gmaps.marker_layer(locations, info_box_content=hotel_info,  hover_text='Click for Hotel')\n",
@@ -247,8 +296,15 @@
     "fig.add_layer(markers)\n",
     "\n",
     "# Display figure\n",
-    "fig\n"
+    "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
