--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1060,8 +1060,8 @@
     "    * Latitude does not have much affect on Humididty. There are propotional number of humid cities\n",
     "      across all latitudes and majority of the cities are humid on this day with humidity levels \n",
     "      between 70% and 100% . \n",
-    "    * This is evident with the r value of 0.1 which shows that the Latitude and Humididty have a VERY WEAK\n",
-    "      correlation. "
+    "    * This is evident with the r value of 0.1 which shows that the Latitude and Humididty have a \n",
+    "      VERY WEAK correlation. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1110,8 +1110,8 @@
     "      with varied percentage of cloud cover across all latitudes. A lot of cities across the globe \n",
     "      have 0% clouds today and there is also a good percentage of cloudy cities with cloud cover \n",
     "      between 80% to 100%. \n",
-    "    * This is evident with an r value of -0.1 which shows that the Latitude and Cloudiness have a VERY WEAK\n",
-    "      correlation. "
+    "    * This is evident with an r value of -0.1 which shows that the Latitude and Cloudiness have a \n",
+    "      VERY WEAK correlation. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1167,8 +1167,8 @@
     "      with varied percentage of cloud cover across all latitudes. A lot of cities across the globe \n",
     "      have 0% clouds today and there is also a good percentage of cloudy cities with cloud cover \n",
     "      between 80% to 100%. \n",
-    "    * This is evident with an r value of 0.17 which shows that the Latitude and Cloudiness have a VERY WEAK\n",
-    "      correlation. "
+    "    * This is evident with an r value of 0.17 which shows that the Latitude and Cloudiness have a \n",
+    "      VERY WEAK correlation. "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1225,8 +1225,8 @@
     "      the cities is between 0 mph and 10 mph. There were some cities with windspeeds between 10 mph \n",
     "      and 20 mph. A small percentage of cities across all latitudes were present with wind speeds \n",
     "      more than 20 mph. \n",
-    "    * This is evident with an r value of -0.1 which shows that the Latitude and Wind Speed have a VERY WEAK \n",
-    "      correlation."
+    "    * This is evident with an r value of -0.1 which shows that the Latitude and Wind Speed have a \n",
+    "      VERY WEAK correlation."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1283,8 +1283,8 @@
     "      the cities is between 0 mph and 10 mph. There were some cities with windspeeds between 10 mph \n",
     "      and 15 mph. A small percentage of cities across all latitudes were present with wind speeds \n",
     "      more than 15 mph. \n",
-    "    * This is evident with an r value of -0.06 which shows that the Latitude and Wind Speed have a VERY WEAK \n",
-    "      correlation."
+    "    * This is evident with an r value of -0.06 which shows that the Latitude and Wind Speed have \n",
+    "      a VERY WEAK correlation."
    ],
    "cell_type": "markdown",
    "metadata": {}
