--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -3,7 +3,7 @@
   {
    "source": [
     "## Background:\n",
-    "Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
+    "To write a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
     "## Observable Trends:\n",
     "1. Latitude and temperature have a STRONG correlation.\n",
     "2. Latitude has VERY WEAK correlation with humidity, windspeed or cloud cover.\n",
