--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -34,6 +34,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,13 +198,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "444e7eefd2b548b49ab2ed27c6b2948c",
+       "model_id": "80ec5766519e4ca7a8bff26a71afe249",
        "version_major": 2,
        "version_minor": 0
       },
@@ -216,6 +225,13 @@
     "fig.add_layer(gmaps.heatmap_layer(coordinates, weights=weight, max_intensity=max_intensity, point_radius=6, opacity=0.8))\n",
     "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -586,18 +602,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f9cfaf760994b85920f3a20a6c87c2c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(border='1px solid black', height='500px', margin='0 auto 0 auto', padding='1px', wi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Figure(layout=FigureLayout(border='1px solid black', height='500px', margin='0 auto 0 auto', padding='1px', width='625'))\n"
+     ]
     }
    ],
    "source": [
@@ -608,7 +617,7 @@
     "fig.add_layer(markers)\n",
     "\n",
     "# Display figure\n",
-    "fig"
+    "print(fig)"
    ]
   },
   {
