--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,7 +13,7 @@
     "* Cities closer to the 30 N line of Lat are warmer. The farther away a city is from 30 N line, the cooler its weather. \n",
     "    * \n",
     "    <br clear=\"all\">\n",
-    "    <table width=\"35%\"><tr><td><img src=\"output_plots/city_lat_vs_Max_Temp.jpeg\"></td></tr></table>\n",
+    "    <table width=\"35%\"><tr><td>![plot](output_plots/city_lat_vs_Max_Temp.jpeg)</td></tr></table>\n",
     "    * This is evident from these plots for NH and SH which show that the Latitude and Temperature have a STRONG correlation..\n",
     "    <br clear=\"all\">\n",
     "    <table width=\"70%\">\n",
