--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "## Reasoning:\n",
     "* Cities closer to the 30 N line of Lat are warmer. The farther away a city is from 30 N line, the cooler its weather. \n",
-    "    * \n",
+    "    '''html\n",
     "    <br clear=\"all\">\n",
-    "    <table width=\"35%\"><tr><td>![plot](output_plots/city_lat_vs_Max_Temp.jpeg)</td></tr></table>\n",
+    "    <table width=\"35%\"><tr><td><img src=\"output_plots/city_lat_vs_Max_Temp.jpeg\"></td></tr></table>\n",
     "    * This is evident from these plots for NH and SH which show that the Latitude and Temperature have a STRONG correlation..\n",
     "    <br clear=\"all\">\n",
     "    <table width=\"70%\">\n",
@@ -22,6 +22,7 @@
     "    <td width=\"50%\"><img src=\"output_plots/SH_city_lat_vs_Max_TempLR.jpeg\"></td>\n",
     "    </tr></table>\n",
     "    <br>\n",
+    "    '''\n",
     "* Regardless of hemisphere, humidity is between 60% to 100% for majority of cities.\n",
     "    <br>\n",
     "    * From this analysis, it is evident that seasonal changes in temperature are only a small variable in humidity fluctuation.\n",
@@ -51,8 +52,10 @@
     "    <td width=\"50%\"><img src=\"output_plots/SH_city_lat_vs_Wind_SpeedLR.jpeg\"></td>\n",
     "    </tr></table>\n"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "source": [],
