--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "source": [
-    "## Background:\n",
-    "To write a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
+    "# Background\n",
+    "* To write a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
     "\n",
-    "![Earth](output_plots/imgEarth.png)\n",
+    "![eart](output_plots/imgEarth.png)\n",
     "\n",
     "## Observable Trends:\n",
     "1. Latitude and temperature have a STRONG correlation.\n",
@@ -29,17 +29,11 @@
     "\n",
     "* As per today's data, in both the Northern and Southern Hemispheres, a majority of cities have wind speeds that are not beyond 10 MPH. \n",
     "\n",
-    "    * Plot also shows a VERY WEAK correlation between Lat and Wind Speed\n"
+    "    * Plot also shows a VERY WEAK correlation between Lat and Wind Speed\n",
+    "\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "source": [],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
   },
   {
    "source": [
