--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -4,9 +4,7 @@
    "source": [
     "# Background\n",
     "* To write a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
-    "\n",
-    "![eart](images_notebk/imgEarth.png)\n",
-    "\n",
+    "![eart](imgEarth.png)\n",
     "## Observable Trends:\n",
     "1. Latitude and temperature have a STRONG correlation.\n",
     "2. Latitude has VERY WEAK correlation with humidity, windspeed or cloud cover.\n",
@@ -29576,9 +29574,8 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
