--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -4,7 +4,8 @@
    "source": [
     "# Background\n",
     "* To write a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
-    "![eart](imgEarth.png)\n",
+    "    ![eart](images_notebk/imgEarth.png)\n",
+    "\n",
     "## Observable Trends:\n",
     "1. Latitude and temperature have a STRONG correlation.\n",
     "2. Latitude has VERY WEAK correlation with humidity, windspeed or cloud cover.\n",
