--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -35,19 +35,8 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# WeatherPy\n",
-    "----\n",
-    "\n",
-    "#### Note\n",
-    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -87,14 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Number of Cities Retrived : 585\n"
+      "Number of Cities Retrived : 601\n"
      ]
     }
    ],
@@ -130,20 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Beginning Data Retrieval\n",
-      "--------------------------------\n",
-      "--------------------------------\n",
-      "Data Retrieval Complete\n",
-      "--------------------------------\n"
+      "Beginning Data Retrieval\n--------------------------------\n--------------------------------\nData Retrieval Complete\n--------------------------------\n"
      ]
     }
    ],
@@ -171,23 +156,23 @@
     "\n",
     "print(\"Beginning Data Retrieval\")     \n",
     "print(\"--------------------------------\")\n",
-    "# for city in cities:\n",
-    "#     response = requests.get(query_url + city).json()\n",
-    "#     try:\n",
-    "#         print(f\"Processing Record {i} City Numer: {response['id']} | {response['name']}\")\n",
-    "#         city_name.append(city)\n",
-    "#         lat.append(response['coord']['lat'])\n",
-    "#         lng.append(response['coord']['lon'])\n",
-    "#         max_temp.append(response['main']['temp_max'])\n",
-    "#         humidity.append(response['main']['humidity'])\n",
-    "#         cloudiness.append(response['clouds']['all'])\n",
-    "#         wind_speed.append(response['wind']['speed'])\n",
-    "#         country.append(response['sys']['country'])\n",
-    "#         country_date.append(response['dt'])\n",
+    "for city in cities:\n",
+    "    response = requests.get(query_url + city).json()\n",
+    "    try:\n",
+    "        print(f\"Processing Record {i} City Numer: {response['id']} | {response['name']}\")\n",
+    "        city_name.append(city)\n",
+    "        lat.append(response['coord']['lat'])\n",
+    "        lng.append(response['coord']['lon'])\n",
+    "        max_temp.append(response['main']['temp_max'])\n",
+    "        humidity.append(response['main']['humidity'])\n",
+    "        cloudiness.append(response['clouds']['all'])\n",
+    "        wind_speed.append(response['wind']['speed'])\n",
+    "        country.append(response['sys']['country'])\n",
+    "        country_date.append(response['dt'])\n",
     "                \n",
-    "#     except (KeyError, IndexError): # response['cod'] == '404':\n",
-    "#         print(f\"City({city}) not found. Skipping....\") \n",
-    "#     i+=1\n",
+    "    except (KeyError, IndexError): # response['cod'] == '404':\n",
+    "        print(f\"City({city}) not found. Skipping....\") \n",
+    "    i+=1\n",
     "print(\"--------------------------------\")\n",
     "print(\"Data Retrieval Complete\")      \n",
     "print(\"--------------------------------\")  "
@@ -204,11 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\nRangeIndex: 566 entries, 0 to 565\nData columns (total 10 columns):\n #   Column      Non-Null Count  Dtype  \n---  ------      --------------  -----  \n 0   Index       566 non-null    int64  \n 1   City        566 non-null    object \n 2   Lat         566 non-null    float64\n 3   Lng         566 non-null    float64\n 4   Max Temp    566 non-null    float64\n 5   Humidity    566 non-null    int64  \n 6   Cloudiness  566 non-null    int64  \n 7   Wind Speed  566 non-null    float64\n 8   Country     561 non-null    object \n 9   Date        566 non-null    int64  \ndtypes: float64(4), int64(4), object(2)\nmemory usage: 44.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "city_data_df = pd.read_csv(\"output_data/cities.csv\")"
+    "# city_data_df = pd.read_csv(\"output_data/cities.csv\")\n",
+    "# city_data_df.info()"
    ]
   },
   {
@@ -217,14 +211,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Convert Raw Data to DataFrame by zipping the lists created in for loop\n",
-    "# city_data_df = pd.DataFrame(list(zip(city_name,lat,lng,max_temp,humidity,cloudiness,wind_speed,country,country_date)),columns =['City','Lat','Lng', 'Max Temp','Humidity','Cloudiness','Wind Speed','Country','Date'])\n",
+    "# Convert Raw Data to DataFrame by zipping the lists created in for loop\n",
+    "city_data_df = pd.DataFrame(list(zip(city_name,lat,lng,max_temp,humidity,cloudiness,wind_speed,country,country_date)),columns =['City','Lat','Lng', 'Max Temp','Humidity','Cloudiness','Wind Speed','Country','Date'])\n",
     "\n",
-    "# # Export the city data into a .csv.\n",
-    "# city_data_df.to_csv(output_data_file,index_label=\"Index\")\n",
+    "# Export the city data into a .csv.\n",
+    "city_data_df.to_csv(output_data_file,index_label=\"Index\")\n",
     "\n",
-    "# # Display the DataFrame\n",
-    "# city_data_df"
+    "# Display the DataFrame\n",
+    "city_data_df"
    ]
   },
   {
