--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -4,7 +4,10 @@
    "source": [
     "# Background\n",
     "* To write a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
-    "    ![eart](images_notebk/imgEarth.png)\n",
+    "<br clear=\"all\">\n",
+    "<table width=\"80%\">\n",
+    "    <tr><td><img src=\"images_notebk/imgEarth.png\"></td></tr>\n",
+    "</table>\n",
     "\n",
     "## Observable Trends:\n",
     "1. Latitude and temperature have a STRONG correlation.\n",
@@ -12,23 +15,46 @@
     "3. Seasonal changes in temperature are only a small variable in humidity fluctuation.\n",
     "\n",
     "## Reasoning:\n",
-    "* Cities closer to the 30 N line of Lat are warmer. The farther away a city is from 30 N line, the cooler its weather. \n",
-    "    \n",
-    "    * This is evident from the plots for NH and SH which show that the Latitude and Temperature have a STRONG correlation.\n",
+    "* It is evident that the closer a city is to the 30 N line, the warmer its weather.The farther a city is from the 30 N line, the cooler its weather. \n",
+    "   * Plot\n",
+    "        <br clear=\"all\">\n",
+    "        <table width=\"20%\"><tr><td width=\"100%\"><img src=\"output_plots/city_lat_vs_Max_Temp.jpeg\"></td></tr></table>\n",
+    "   * This conclusion is in reference to the plots for NH and SH, in which the Latitude and Temperature have a STRONG correlation.\n",
+    "   * The temperature values peaking at the 30 N line is due to the position of the Earth from June through September. The NH               is the hemisphere tilted towards the sun. Therefore, the 30 N line of latitude gets sun exposure at a 90-degree angle.\n",
     "\n",
-    "* Regardless of hemisphere,humidity is between 60% to 100% for majority of cities.\n",
+    "        <br clear=\"all\">\n",
+    "        <table width=\"40%\"><tr>\n",
+    "        <td width=\"50%\"><img src=\"output_plots/NH_city_lat_vs_Max_TempLR.jpeg\"></td>\n",
+    "        <td width=\"50%\"><img src=\"output_plots/SH_city_lat_vs_Max_TempLR.jpeg\"></td>\n",
+    "        </tr></table>\n",
     "\n",
-    "    * From this analysis, it is evident that seasonal changes in temperature are only a small variable in humidity fluctuation.\n",
-    "\n",
-    "    * Plot also shows a VERY WEAK correlation between Lat and Humidity\n",
+    "  * Humidity is between 60% to 100% for the majority of cities, regardless of hemisphere. From this analysis, one can conclude that       seasonal temperature changes are only a small variable in humidity fluctuation. \n",
+    "  * Because humidity appears to stay consistently random across all latitudes, and latitude influences temperature, it is safe to         assume that temperature doesn’t have a profound effect on humidity levels.\n",
+    "     \n",
+    "  * Plot also shows a VERY WEAK correlation between Lat and Humidity\n",
+    "    <br clear=\"all\">\n",
+    "    <table width=\"40%\"><tr>\n",
+    "    <td width=\"50%\"><img src=\"output_plots/NH_city_lat_vs_HumidityLR.jpeg\"></td>\n",
+    "    <td width=\"50%\"><img src=\"output_plots/SH_city_lat_vs_HumidityLR.jpeg\"></td>\n",
+    "    </tr></table>\n",
     "\n",
     "* Globally, a majority of cities cloud cover is one of two extremes; 100% or 0% cloud cover. \n",
+    "        \n",
+    "   * Plots show a VERY WEAK correlation between Latitude and Cloudiness\n",
+    "        <br clear=\"all\">\n",
+    "        <table width=\"40%\"><tr>\n",
+    "        <td width=\"50%\"><img src=\"output_plots/NH_city_lat_vs_CloudinessLR.jpeg\"></td>\n",
+    "        <td width=\"50%\"><img src=\"output_plots/SH_city_lat_vs_CloudinessLR.jpeg\"></td>\n",
+    "        </tr></table>\n",
     "\n",
-    "    * Plot also shows a VERY WEAK correlation between Lat and Cloudiness\n",
-    "\n",
-    "* As per today's data, in both the Northern and Southern Hemispheres, a majority of cities have wind speeds that are not beyond 10 MPH. \n",
-    "\n",
-    "    * Plot also shows a VERY WEAK correlation between Lat and Wind Speed\n",
+    "* As per todays data, in both the Northern and Southern Hemispheres, a majority of cities have wind speeds that are not beyond 10 MPH.\n",
+    " \n",
+    "    * Plots show a VERY WEAK correlation between Latitude and Wind Speed.\n",
+    "        <br clear=\"all\">\n",
+    "        <table width=\"40%\"><tr>\n",
+    "        <td width=\"50%\"><img src=\"output_plots/NH_city_lat_vs_Wind_SpeedLR.jpeg\"></td>\n",
+    "        <td width=\"50%\"><img src=\"output_plots/SH_city_lat_vs_Wind_SpeedLR.jpeg\"></td>\n",
+    "        </tr></table>\n",
     "\n"
    ],
    "cell_type": "markdown",
