--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "source": [
-    "# VacationPy"
+    "<br clear=\"all\">\n",
+    "<table width=\"90%\" align=\"center\">\n",
+    "    <tr><td><img src=\"images_notebk/vaca_dream.jpg\"></td></tr>\n",
+    "</table>"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -106,7 +109,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "a01b9059f9b44b5bb28dd6c75b04d138"
+       "model_id": "b8cde5fbcff64c7e8597348fc2e31cf7"
       }
      },
      "metadata": {}
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +178,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Index</th>\n      <th>City</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>HotelName</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>21</th>\n      <td>21</td>\n      <td>Arraial Do Cabo</td>\n      <td>-22.9661</td>\n      <td>-42.0278</td>\n      <td>69.76</td>\n      <td>78</td>\n      <td>0</td>\n      <td>3.44</td>\n      <td>BR</td>\n      <td>1624484750</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>54</th>\n      <td>54</td>\n      <td>Martil</td>\n      <td>35.6166</td>\n      <td>-5.2752</td>\n      <td>71.67</td>\n      <td>78</td>\n      <td>0</td>\n      <td>6.91</td>\n      <td>MA</td>\n      <td>1624484760</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>80</th>\n      <td>80</td>\n      <td>Gasa</td>\n      <td>31.5000</td>\n      <td>34.4667</td>\n      <td>76.98</td>\n      <td>74</td>\n      <td>0</td>\n      <td>4.23</td>\n      <td>PS</td>\n      <td>1624484768</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>84</th>\n      <td>84</td>\n      <td>Korla</td>\n      <td>41.7597</td>\n      <td>86.1469</td>\n      <td>71.49</td>\n      <td>21</td>\n      <td>0</td>\n      <td>8.55</td>\n      <td>CN</td>\n      <td>1624484769</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>259</th>\n      <td>259</td>\n      <td>Uttarkashi</td>\n      <td>30.7333</td>\n      <td>78.4500</td>\n      <td>68.50</td>\n      <td>72</td>\n      <td>0</td>\n      <td>6.42</td>\n      <td>IN</td>\n      <td>1624484891</td>\n      <td></td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 5
     }
    ],
    "source": [
@@ -200,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +267,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Index</th>\n      <th>City</th>\n      <th>Lat</th>\n      <th>Lng</th>\n      <th>Max Temp</th>\n      <th>Humidity</th>\n      <th>Cloudiness</th>\n      <th>Wind Speed</th>\n      <th>Country</th>\n      <th>Date</th>\n      <th>HotelName</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>21</th>\n      <td>21</td>\n      <td>Arraial Do Cabo</td>\n      <td>-22.9661</td>\n      <td>-42.0278</td>\n      <td>69.76</td>\n      <td>78</td>\n      <td>0</td>\n      <td>3.44</td>\n      <td>BR</td>\n      <td>1624484750</td>\n      <td>Pousada Porto Praia</td>\n    </tr>\n    <tr>\n      <th>54</th>\n      <td>54</td>\n      <td>Martil</td>\n      <td>35.6166</td>\n      <td>-5.2752</td>\n      <td>71.67</td>\n      <td>78</td>\n      <td>0</td>\n      <td>6.91</td>\n      <td>MA</td>\n      <td>1624484760</td>\n      <td>فندق مرتيل</td>\n    </tr>\n    <tr>\n      <th>80</th>\n      <td>80</td>\n      <td>Gasa</td>\n      <td>31.5000</td>\n      <td>34.4667</td>\n      <td>76.98</td>\n      <td>74</td>\n      <td>0</td>\n      <td>4.23</td>\n      <td>PS</td>\n      <td>1624484768</td>\n      <td>رابطة الفنانين الفلسطينيين</td>\n    </tr>\n    <tr>\n      <th>84</th>\n      <td>84</td>\n      <td>Korla</td>\n      <td>41.7597</td>\n      <td>86.1469</td>\n      <td>71.49</td>\n      <td>21</td>\n      <td>0</td>\n      <td>8.55</td>\n      <td>CN</td>\n      <td>1624484769</td>\n      <td>Gulisitan Hotel</td>\n    </tr>\n    <tr>\n      <th>259</th>\n      <td>259</td>\n      <td>Uttarkashi</td>\n      <td>30.7333</td>\n      <td>78.4500</td>\n      <td>68.50</td>\n      <td>72</td>\n      <td>0</td>\n      <td>6.42</td>\n      <td>IN</td>\n      <td>1624484891</td>\n      <td>Anand Ganga</td>\n    </tr>\n    <tr>\n      <th>271</th>\n      <td>271</td>\n      <td>Langarud</td>\n      <td>37.1970</td>\n      <td>50.1535</td>\n      <td>75.18</td>\n      <td>52</td>\n      <td>0</td>\n      <td>4.03</td>\n      <td>IR</td>\n      <td>1624484895</td>\n      <td>ستاد اسکان فرهنگیان لنگرود</td>\n    </tr>\n    <tr>\n      <th>305</th>\n      <td>305</td>\n      <td>Ukholovo</td>\n      <td>53.7929</td>\n      <td>40.4892</td>\n      <td>70.25</td>\n      <td>79</td>\n      <td>0</td>\n      <td>3.67</td>\n      <td>RU</td>\n      <td>1624484905</td>\n      <td>Pupchiny</td>\n    </tr>\n    <tr>\n      <th>394</th>\n      <td>394</td>\n      <td>Komsomolskiy</td>\n      <td>40.4272</td>\n      <td>71.7189</td>\n      <td>70.52</td>\n      <td>35</td>\n      <td>0</td>\n      <td>6.91</td>\n      <td>UZ</td>\n      <td>1624484996</td>\n      <td>Ikathouse</td>\n    </tr>\n    <tr>\n      <th>429</th>\n      <td>429</td>\n      <td>Gat</td>\n      <td>31.6100</td>\n      <td>34.7642</td>\n      <td>75.88</td>\n      <td>79</td>\n      <td>0</td>\n      <td>3.09</td>\n      <td>IL</td>\n      <td>1624485008</td>\n      <td>Olushome</td>\n    </tr>\n    <tr>\n      <th>454</th>\n      <td>454</td>\n      <td>Sulina</td>\n      <td>45.1559</td>\n      <td>29.6536</td>\n      <td>69.37</td>\n      <td>89</td>\n      <td>0</td>\n      <td>6.85</td>\n      <td>RO</td>\n      <td>1624485015</td>\n      <td>Hotel Delta Est</td>\n    </tr>\n    <tr>\n      <th>457</th>\n      <td>457</td>\n      <td>Tonekabon</td>\n      <td>36.8163</td>\n      <td>50.8738</td>\n      <td>75.15</td>\n      <td>40</td>\n      <td>0</td>\n      <td>3.06</td>\n      <td>IR</td>\n      <td>1624485016</td>\n      <td>Hotel Sadra</td>\n    </tr>\n    <tr>\n      <th>557</th>\n      <td>557</td>\n      <td>Sidi Ali</td>\n      <td>36.0998</td>\n      <td>0.4206</td>\n      <td>68.41</td>\n      <td>65</td>\n      <td>0</td>\n      <td>6.33</td>\n      <td>DZ</td>\n      <td>1624485047</td>\n      <td>الغابة الترفيهية بورحمة</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 45
+     "execution_count": 7
     }
    ],
    "source": [
@@ -288,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +301,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "a01b9059f9b44b5bb28dd6c75b04d138"
+       "model_id": "b8cde5fbcff64c7e8597348fc2e31cf7"
       }
      },
      "metadata": {}
