--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "source": [
-    "<br clear=\"all\">\n",
-    "<table width=\"90%\" align=\"center\">\n",
-    "    <tr><td><img src=\"images_notebk/vaca_dream.jpg\"></td></tr>\n",
-    "</table>"
+    "![Earth](images_notebk/vaca_dream.jpg)"
    ],
    "cell_type": "markdown",
    "metadata": {}
