--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -4,10 +4,7 @@
    "source": [
     "# Background\n",
     "* To write a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator by utilizing a simple Python library 'citipy' and the 'OpenWeatherMap API' to create a representative model of weather across world cities.\n",
-    "<br clear=\"all\">\n",
-    "<table width=\"80%\">\n",
-    "    <tr><td><img src=\"images_notebk/imgEarth.png\"></td></tr>\n",
-    "</table>\n",
+    "![Earth](images_notebk/imgEarth.png)\n",
     "\n",
     "## Observable Trends:\n",
     "1. Latitude and temperature have a STRONG correlation.\n",
