--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -179,9 +179,10 @@
     }
    ],
    "source": [
-    "# A max temperature lower than 80 degrees but higher than 70.\n",
+    "# A max temperature lower than 80 degrees but higher than 70. \n",
+    "# I dont mind a few degrees cooler, so going with max temps bwteeen 68 and 80\n",
     "# Wind speed less than 10 mph.\n",
-    "# Zero cloudiness. May be i dont mind a few clods today\n",
+    "# Zero cloudiness.\n",
     "\n",
     "#Store into variable named hotel_df\n",
     "hotel_df = pd.DataFrame(city_data.loc[((city_data[\"Max Temp\"]>=68) & (city_data[\"Max Temp\"]<=80)) & (city_data[\"Wind Speed\"]<10) & (city_data[\"Cloudiness\"] == 0) ])\n",
@@ -220,8 +221,7 @@
     "    response = requests.get(base_url, params=params).json()\n",
     "\n",
     "    #Store the first Hotel result into the DataFrame.\n",
-    "    hotel_df.loc[index, 'HotelName'] = (response['results'][0]['name']).title()\n",
-    "    #print(response['results'][0]['name'])"
+    "    hotel_df.loc[index, 'HotelName'] = (response['results'][0]['name']).title()"
    ]
   },
   {
